--- a/src/styles/Logo.module.css
+++ b/src/styles/Logo.module.css
@@ -1,7 +1,15 @@
+.logo {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 0rem;
+}
+
+.logo span {
+    /* display: inline-block; */
+    font-size: 2rem;
+}
+
 .logo img {
-    width: 3.5rem;
-    height: 3.5rem;
-    border: 3px dotted grey;
-    border-radius: 10%;
-    padding: 0.5rem;
+    height: 5rem;
 }
