--- a/src/styles/Nav.module.css
+++ b/src/styles/Nav.module.css
@@ -1,12 +1,31 @@
-.nav ul {
+.nav {
     display: flex;
     justify-content: center;
-    gap: 4rem;
-    list-style: none;
-    padding: 1.5rem;
-    width: 100vw;
+    align-items: center;
+    padding: 3rem 6rem;
 }
 
-nav ul li a {
+.nav ul {
+    display: flex;
+    gap: 4rem;
+    font-size: 1.5rem;
+    align-items: center;
+    padding: 0.9rem;
+}
+
+.nav .loginBtn {
+    background-color: var(--color-black);
+    padding: 0.7rem 1.8rem;
+    border-radius: 10rem;
+    color: var(--color-white);
+
+}
+
+.nav a {
     text-decoration: none;
+    color: var(--color-black);
+}
+
+.nav ul li:not(:first-child) :global(a.active) {
+    color: var(--color-main-yellow);
 }
