--- a/src/global.css
+++ b/src/global.css
@@ -38,3 +38,25 @@ a {
     text-decoration: none;
     list-style: none;
 }
+
+.logoBox {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+    background-color: #f8f9fa;
+    padding: 0.8rem 1rem;
+    border-radius: var(--radius-sm);
+    gap: 0.2rem;
+    width: fit-content;
+    border: 1px solid #fcc419;
+}
+
+.logoBox span {
+    font-size: 1.3rem;
+    font-weight: 500;
+}
+
+.logoBox img {
+    height: 5rem !important;
+}
