--- a/src/styles/loginPage.module.css
+++ b/src/styles/loginPage.module.css
@@ -21,7 +21,7 @@
 }
 
 .imgBox {
-    width: 100%;
+    flex-grow: 1;
 }
 
 .imgBox img {
@@ -30,27 +30,7 @@
     object-fit: cover;
 }
 
-.logoBox {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: flex-start;
-    background-color: #f8f9fa;
-    padding: 0.8rem 1rem;
-    border-radius: var(--radius-sm);
-    gap: 0.2rem;
-    width: fit-content;
-    border: 1px solid #fcc419;
-}
 
-.logoBox span {
-    font-size: 1.3rem;
-    font-weight: 500;
-}
-
-.logoBox img {
-    height: 4rem !important;
-}
 
 .formBox {
     width: 70rem;
